1.填报页回显提示 2.报告时间bug修复

--- a/src/main/webapp/pages/credit/reportTime/reportTime_EntryAlreadyExist.html
+++ b/src/main/webapp/pages/credit/reportTime/reportTime_EntryAlreadyExist.html
@@ -11,7 +11,7 @@ var bodyContent = {
 		role="form" >
 	<input type="hidden" name="model.id" value="${model.id}" />
 	<div style="text-align: middle;margin:150px 90px;" >
-		<span style="color:red;font-size:18px;font-family:微软雅黑"><b>该纪录和已有纪录有冲突!</b></span>
+		<span style="color:red;font-size:18px;font-family:微软雅黑"><b>该纪录和已有纪录有冲突或参数错误!</b></span>
 	</div>
 	<div style="height: 50px;clear: both;">&nbsp;</div>
 	<nav class="navbar navbar-default navbar-fixed-bottom">
