--- a/src/main/webapp/pages/credit/reportTime/reportTime_list.html
+++ b/src/main/webapp/pages/credit/reportTime/reportTime_list.html
@@ -82,8 +82,9 @@
 			</select> 
 		</div>
 		<div class="form-group">
-			<input style="width: 200px;" class="form-control" valid='vnum_y' type="text" name="model.use_time"
-				value="${model.use_time!''}" placeholder="请输入时间" required='required' />
+		 <label  class="control-label">用时</label>
+			<input style="width: 200px;" class="form-control" valid='vnum_y' type="text" name="use_time"
+				value="${model.use_time!''}" placeholder="请输入用时" required='required' />
 		</div>
 		<div class="form-group">
 		   <label  class="control-label">是否启用</label>
