--- a/src/main/webapp/pages/credit/agentmanager/agent_view.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_view.html
@@ -59,7 +59,7 @@ var bodyContent = {
 		</tr>
 		<tr>
 			<td>代理类别</td>
-			<td>${model.agent_categoryName}</td>
+			<td>${model.agent_category}</td>
 		</tr>
 		</table>
 	<div style="height: 50px;clear: both;">&nbsp;</div>
