--- a/src/main/webapp/pages/credit/agentmanager/agent_list.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_list.html
@@ -76,6 +76,7 @@ var paginator = function(page) {
 	<table class="table table-striped table-bordered table-hover">
 		<thead>
 			<tr>
+				<th>序号</th>
 				<th name="a.agent_id" class="sorting">代理编码</th>
 				<th name="a.agent_type" class="sorting">代理类型</th>
 				<th name="a.agent_name" class="sorting">代理名称</th>
@@ -95,6 +96,7 @@ var paginator = function(page) {
 		<tbody>
 		<% for(item in page.list) { %>
 			<tr>
+				<td>${itemLP.index }</td>
 				<td>${item.agent_id}</td>
 				<td>${item.agentType}</td>	
 				<td>${item.agent_name}</td>
@@ -107,7 +109,10 @@ var paginator = function(page) {
 				<td>${item.Usabled}</td>
 				<td>${item.provinceName}</td>
 				<td>${item.cityName}</td>
-				<td>${item.agent_categoryName}</td>
+				<td>
+				<% if (strutil.length(item.agent_category) >
+					12) { %> ${strutil.subStringTo(item.agent_category, 0, 12)}... <% } else { %>
+					${item.agent_category} <% } %>
 				<td>
 					<a href="javascript:void(0);" class="btn btn-sm btn-success"  onclick="oper.view(${item.agent_id});">查看</a> 
 					<a href="javascript:void(0);" class="btn btn-sm btn-primary"  onclick="oper.edit(${item.agent_id});">修改</a> 
