--- a/src/main/webapp/pages/admin/ordermanager/order_list.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_list.html
@@ -1,3 +1,4 @@
+<% var sandbar = tempDict.getSysDictDetailString('continent',''); %>
 <%
 var headContent = {
 include("/pages/template/head.html"){}
@@ -6,24 +7,15 @@ include("/pages/template/head.html"){}
 	$(function(){
 		$.get('/credit/front/home/getMessage',function(data){
 			getCustoms(data.customs);
-			getContient(data.continent);
 			getCountry(data.country);
 		})
 	});
 	function getCustoms(data){
 		var html=""
 		for(item in data){
-			html+="<option  value='"+data[item].id+"'>"+data[item].name+"</option>";
+			html+="<option  value='"+data[item].id+"'>"+data[item].id+"</option>";
 		}
 		$("select[name='attr.custom_id']").append(html);
-	};
-	function getContient(data){
-		var html=""
-		for(item in data){
-			html+="<option  value='"+data[item].detail_id+"'>"+data[item].detail_name+"</option>";
-		}
-		$("select[name='attr.continent']").append(html);
-		
 	};
 	function getCountry(data){
 		var html=""
@@ -34,7 +26,7 @@ include("/pages/template/head.html"){}
 			$("select[name='attr.country']").html(html);
 	}
 	function getCountry2(){
-		var contient =$("select[name='attr.continent']").val();
+		var contient =$("select[name='attr.continent']").find("option:selected").val();
 		$.get('/credit/front/home/getCountry?contient='+contient,function(data){
 			console.log(data)
 			getCountry(data);
@@ -105,21 +97,21 @@ var bodyContent = {
 				   placeholder="请输入订单编号" required='required' />
 		</div>
 		 <div class="form-group">
-             <input  name="attr.company_by_report" type="text" class="form-control"
+             <input  name="attr.company_by_report" type="text" class="form-control" value="${attr.company_by_report!''}"
               placeholder="请输入公司名称" required='required' />
          </div>
 		<div class="form-group">
-             <input  name="attr.right_company_name_en" type="text" class="form-control" 
+             <input  name="attr.right_company_name_en" type="text" class="form-control" value="${attr.right_company_name_en!''}"
               placeholder="请输入订单公司名称" required='required' />
    		</div>
    		 <div class="form-group" >
 	           <select  name="attr.custom_id" class="form-control">
-	               <option value="" disabled selected>请选择客户</option>
+	               <option value="" disabled selected>请选择客户ID</option>
 	           </select>
 	      </div>
 	       <div class="form-group">
 	            <select  name="attr.continent" class="form-control" onchange="getCountry2()">
-	                <option value="" disabled selected>请选择地区</option>
+	               ${sandbar!}
 	            </select>
 	        </div>
 	        <div class="form-group">
