--- a/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
@@ -82,11 +82,11 @@
                         <div class="firm-info mt-4 px-5 d-flex justify-content-between">
                             <div class="form-group ">
                                 <label for="qy_create" class="mb-2">成立日期</label>
-                                <input name="currency" type="text" class="form-control" id="qy_create" placeholder=""">
+                                <input name="establishment_date" type="text" class="form-control" id="qy_create" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label for="qy_date" class="mb-2">营业期限至</label>
-                                <input name="business_date_start" type="text" class="form-control" id="qy_date" placeholder=""">
+                                <input name="business_date_end" type="text" class="form-control" id="qy_date" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label for="qy_money" class="mb-2">注册资本</label>
@@ -121,6 +121,7 @@
                             <table id="tableRecord"
                                 data-toggle="table"
                                 style="position: relative"
+                      			 data-url="./data.json"
                             >
                             </table>
                             <button class="btn btn-lg btn-block mb-5" type="button" id="add_record" data-toggle="modal" data-target="#recordModalCenter">+ 新增记录</button>
