--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_allocation.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_allocation.html
@@ -27,6 +27,7 @@
                     <p class="main-title">订单分配</p>                 
                 </div>
                 <!-- 表格 -->
+                <input type="hidden" name="pageSize" value="">
                 <div class="table-content">
                        <div class="bg-f">
                            <div class="form-box">
