--- a/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
@@ -1,4 +1,4 @@
-<% var companyType = tempDict.getSysDictDetailString2('companyType','318'); %>
+<% var companyType = tempDict.getSysDictDetailString3('companyType','318','detail_name'); %>
 <!DOCTYPE html>
 <html>
 <head>
