--- a/src/main/webapp/pages/credit/agentmanager/agent_list.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_list.html
@@ -87,6 +87,7 @@ var paginator = function(page) {
 				<th name="a.currency" class="sorting">币种</th>
 				<th name="a.speed" class="sorting">速度</th>
 				<th name="a.usabled" class="sorting">是否禁用</th>
+				<th name="a.country" class="sorting">国家</th>
 				<th name="a.province" class="sorting">省份</th>
 				<th name="a.city" class="sorting">城市</th>
 				<th name="a.agent_category" class="sorting">代理类别</th>
@@ -107,6 +108,7 @@ var paginator = function(page) {
 				<td>${item.Currency}</td>
 				<td>${item.Speed}</td>
 				<td>${item.Usabled}</td>
+				<td>${item.country}</td>
 				<td>${item.provinceName}</td>
 				<td>${item.cityName}</td>
 				<td>
