--- a/src/main/webapp/pages/credit/agentmanager/agent_view.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_view.html
@@ -58,6 +58,10 @@ var bodyContent = {
 			<td>${model.cityName}</td>
 		</tr>
 		<tr>
+			<td>国家</td>
+			<td>${countrys}</td>
+		</tr>
+		<tr>
 			<td>代理类别</td>
 			<td>${model.agent_category}</td>
 		</tr>
