--- a/src/main/webapp/pages/credit/agentmanager/agent_list.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_list.html
@@ -108,17 +108,22 @@ var paginator = function(page) {
 				<td>${item.Currency}</td>
 				<td>${item.Speed}</td>
 				<td>${item.Usabled}</td>
-				<td>${item.country}</td>
+				<td>
+					<% if (strutil.length(item.country) >
+					12) { %> ${strutil.subStringTo(item.country, 0, 12)}... <% } else { %>
+					${item.country} <% } %>
+				</td>
 				<td>${item.provinceName}</td>
 				<td>${item.cityName}</td>
 				<td>
 				<% if (strutil.length(item.agent_category) >
 					12) { %> ${strutil.subStringTo(item.agent_category, 0, 12)}... <% } else { %>
 					${item.agent_category} <% } %>
+				</td>
 				<td>
 					<a href="javascript:void(0);" class="btn btn-sm btn-success"  onclick="oper.view(${item.agent_id});">查看</a> 
 					<a href="javascript:void(0);" class="btn btn-sm btn-primary"  onclick="oper.edit(${item.agent_id});">修改</a> 
-					<a href="javascript:void(0);" class="btn btn-sm btn-danger"  onclick="oper.del(${item.agent_id});">删除</a></td>
+					<a href="javascript:void(0);" class="btn btn-sm btn-danger"  onclick="oper.del(${item.agent_id});">删除</a>
 				</td>
 			</tr>
 		<% } %>
