--- a/src/main/webapp/pages/credit/custom/custom_view.html
+++ b/src/main/webapp/pages/credit/custom/custom_view.html
@@ -1,5 +1,6 @@
 <% var usabled = tempDict.getSysDictDetailByType('usabled'); %>
 <% var is_old_customer = tempDict.getSysDictDetailByType('is_old_customer'); %>
+<% var isArrearage = tempDict.getSysDictDetailByType('isArrearage'); %>
 <% 
 var headContent = {
 	include("/pages/template/head.html"){}
@@ -40,6 +41,17 @@ var bodyContent = {
 				<td>${item.fax}</td>
 				<td>国家</td>
 				<td>${item.countryName}</td>
+			</tr>
+			<tr>
+				<td>当前账户点数</td>
+				<td>${item.account_count}</td>
+				<td>是否可以欠费</td>
+				<% for(it in isArrearage){ %>
+						 	<% if((item.is_arrearage+"")==(it.detail_id+"")){ %>
+							 	<td>${it.detail_name}</td>
+							<% }else{ %>
+							<%}%>
+				<% } %>
 			</tr>
 			<tr>
 				<td>是否可用</td>
