页面时间类型修改

--- a/src/main/webapp/pages/credit/custom/customflow_list.html
+++ b/src/main/webapp/pages/credit/custom/customflow_list.html
@@ -110,7 +110,7 @@ var bodyContent = {
 					
 					<td>${item.oper_point_after_num}</td>
 					<td>${item.remark}</td>
-					<td>${item.create_time}</td>
+					<td>${item.create_time,dateFormat="yyyy-MM-dd HH:mm:ss"}</td>
 				</tr>
 			<% } %>
 			</tbody>
