--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -68,7 +68,7 @@
                             </div>
                             <div class="input-group mt-2 col-md-4" id="country">
                                 <label class="control-label col-md-4" for="txt_search_country">国家：</label>
-                                <select class="search-input col-md-8 layui-input" id="txt_search_country" name='attr.country'>
+                                <select class="search-input col-md-8 layui-input" id="txt_search_country" name='attr.country'lay-search="" ay-verify="">
                                     <option value="" disabled selected>请选择国家</option>
                                 </select>
                             </div>
