--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -307,7 +307,7 @@
                                  <input type="hidden" name="orderId" id="orderId2">
                             </div>
                     </div>
-                        <div class="file-upload">
+                        <div>
                             <div class="row mt-3 mb-2">
                                 <div class="input-group col-md-6 align-items-center">
                                     <label class="control-label col-md-4 text-right">代理ID：</label>
