--- a/src/main/webapp/pages/credit/uploadfile/file_view.html
+++ b/src/main/webapp/pages/credit/uploadfile/file_view.html
@@ -59,13 +59,13 @@ var bodyContent = {
 				<td>创建时间</td>
 				<td>${model.create_date}</td>
 				<td>上传人</td>
-				<td>${model.create_by}</td>
+				<td>${model.realname}</td>
 			</tr>
 			<tr>
 				<td>修改时间</td>
 				<td>${model.update_date}</td>
 				<td>修改人</td>
-				<td>${model.update_by}</td>
+				<td>${model.realname}</td>
 			</tr>
 			<tr>
 				<td>备注</td>
