--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -154,17 +154,20 @@
 		                        <input name="attr.contacts" type="text" class="form-control  col-md-8" id="client_contact" placeholder="请输入联系人">
 		                    </div>
 		                </div>
-		    			<div class="form-group row d-flex justify-content-around mb-4">
+		    			<div class="form-group row d-flex justify-content-start mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">Email：</label>
 		                        <input name="attr.email" type="text" class="form-control search-input col-md-8" id="client_email" onblur="Events.emailAdd(this)" placeholder="请输入邮箱地址">
 		                    	<p class="errorInfo col-md-8">请输入正确格式</p>
 		                    </div>
 
-							<div class="input-group mt-2 col-md-6">
-								<label class="control-label col-md-4" for="">备注：</label>
-								<textarea name="attr.remarks" class="form-control search-input  col-md-8"  name="" rows="1" cols="" placeholder="请输入其他细节"></textarea>
+		                </div>
+		                <div class="form-group row d-flex justify-content-start mb-4">
+							<div class="input-group mt-2 col-md-12">
+								<label class="control-label col-md-2" for="">备注：</label>
+								<textarea name="attr.remarks" class="form-control search-input  col-md-10"  name="" rows="4" cols="" placeholder="请输入其他细节"></textarea>
 							</div>
+		               
 		                </div>
 		    			<div class="form-group row d-flex mb-4 file-upload-box">
 							<div class="file-upload">
