改变排序方式,改变路由头

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -16,6 +16,9 @@
     		color:var(--fontColor)!important;
     	}
     </style>
+    <script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
 <div id="container" class="row  animated fadeIn">
 
