--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail_business.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail_business.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/menu.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_detail_business.css">
+    <script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
 <body>
 <div class="container-fluid">
