--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -8,6 +8,9 @@
     <meta name="renderer" content="webkit">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_filing.css">
     <script src="${BASE_PATH }static/credit/js/order_manage/jquery.form.min.js"></script>
+    <script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
         <div id="container" class="row  animated fadeIn">
           
