--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/common.css">
    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/index.css">
 
-
+	<script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
 
         <div id="container" class="row  animated fadeIn">
