--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_allocation.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_allocation.html
@@ -8,6 +8,9 @@
     <meta name="renderer" content="webkit">
      <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_allocation.css">
+    <script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
   
         <div id="container" class="row  animated fadeIn">
