--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -16,8 +16,9 @@
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/menu.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_detail.css">
-
-    
+	<script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
 
     <div id="container" class="row animted fadeIn">
