--- a/src/main/webapp/pages/credit/usercenter/passward_change.html
+++ b/src/main/webapp/pages/credit/usercenter/passward_change.html
@@ -8,7 +8,9 @@
     <meta name="renderer" content="webkit">
     
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/passward_change.css">
-
+	<script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
 
     <div id="container" class="row animated fadeIn">
