--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_business_info.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_business_info.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="${BASE_PATH}static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH}static/credit/css/report_css/reported_basic_info.css">
     <link rel="stylesheet" href="${BASE_PATH}static/credit/css/report_css/report_business_info.css">
+    <script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
   
         <div id="container" class="row  animated fadeIn">         
