--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
@@ -8,6 +8,9 @@
     <meta name="renderer" content="webkit">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_filing.css">
     <script src="${BASE_PATH }static/credit/js/order_manage/jquery.form.min.js"></script>
+    <script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
         <div id="container" class="row  animated fadeIn">
           
@@ -214,7 +217,7 @@
                             </div>
                     </div>
                  <form class="tableValue" action="/credit/front/orderProcess/statusSaveWithFileUpLoad" class="form-inline " enctype="multipart/form-data" method="post">
-                    <div class="file-upload pl-5">
+                    <div>
                         <div class="uploadFile mt-3 mr-4">
                             <input type="file" name="Files_1" id="upload_file" value="" class="file-input" />
                             <div class="over-box"> 
