--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_order_verify.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_order_verify.html
@@ -9,6 +9,9 @@
     <meta name="renderer" content="webkit">
     <link rel="stylesheet" href="${BASE_PATH}static/credit/css/order_manage/order_verify.css">
     <link rel="stylesheet" href="${BASE_PATH}static/credit/css/report_css/report_common.css">
+    <script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
 
 <div id="container" class="row  animated fadeIn">
