--- a/src/main/webapp/pages/credit/usercenter/showLogin.html
+++ b/src/main/webapp/pages/credit/usercenter/showLogin.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/common.css">
    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/login.css">
    <script type="text/javascript"> let path ="${BASE_PATH }";</script>
+   <script type="text/javascript">
+	    var BASE_PATH = "${BASE_PATH }";
+    </script>
 </head>
 <body>
     
