--- a/src/main/webapp/pages/credit/usercenter/showLogin.html
+++ b/src/main/webapp/pages/credit/usercenter/showLogin.html
@@ -14,7 +14,10 @@
    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/login.css">
    <script type="text/javascript"> let path ="${BASE_PATH }";</script>
    <script type="text/javascript">
-	    var BASE_PATH = "${BASE_PATH }";
+	    let BASE_PATH = "${BASE_PATH }";
+	    console.log(BASE_PATH)
+	    console.log("为什么重定向看不到!");
+	    //  console.log(${CONTEXT_PATH })
     </script>
 </head>
 <body>
