--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -10,6 +10,7 @@
     <script src="${BASE_PATH }static/credit/js/order_manage/jquery.form.min.js"></script>
     <script type="text/javascript">
 	    var BASE_PATH = "${BASE_PATH }";
+	   // console.log(qqqqqqqq)
     </script>
 </head>
         <div id="container" class="row  animated fadeIn">
