--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -63,7 +63,7 @@
                                     </div>
                                     <div class="input-group mt-2 col-md-4">
                                         <label class="control-label col-md-4" for="txt_search_statu">到期日期：</label>
-                                        <input id="dead_date" type="date" class="form-control search-input col-md-8"  placeholder="请选择到期日期"">
+                                        <input id="dead_date" type="text" class="form-control search-input col-md-8"  placeholder="请选择到期日期"">
                                     </div>
                                 </div>
                                 <div id="btnCollapse" class="show row justify-content-around">
