--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -23,7 +23,7 @@
      <header>     
         <div class="row head-row d-flex justify-content-between">
             <!-- logo -->
-            <div class="head-logo-box d-flex justify-content-center align-items-center col-xs-2 col-sm-2 col-md-2 col-lg-2">
+            <div class="head-logo-box d-flex justify-content-center align-items-center" style="width:16.66%">
                 <a href="#" >
                     <div class="logo-content"></div>
                 </a>
@@ -45,9 +45,9 @@
        </header> 
       <div id="container" class="row">
             <!-- 左侧菜单 -->
-         <div class="nav-row col-md-2">
+         <div class="nav-row" style="width:16.66%">
             <div class="nav-box">
-             
+             <div id="handleMenu" class="d-flex align-items-center"><div class="border-div"></div></div>
                 <!-- 菜单 -->
                 <div class="left-nav">
                     <ul>
