--- a/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
@@ -375,9 +375,10 @@
             </div>
         </div>
     </div>
-
-
-   
+    
+ 	<script src="${BASE_PATH }static/credit/assets/city-select/Popt.js"></script>
+ 	<script src="${BASE_PATH }static/credit/assets/city-select/cityJson.js"></script>
+ 	<script src="${BASE_PATH }static/credit/assets/city-select/citySet.js"></script>
     <script src="${BASE_PATH }static/credit/js/report_js/reported_basic_info.js"></script>
 
 </html>
