--- a/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
@@ -192,7 +192,7 @@
                         <div class="l-title change_record">
                             附件
                         </div>
-                        <div class="order-detail mb-4 order-content">
+                        <div class="order-detail mb-4 order-content d-flex flex-wrap mx-4 justify-content-start">
                             <div class="this-items col-md-2 d-flex flex-column justify-content-center align-items-center my-5">
 
                                 <div class="uploadFile">
